# d435i-zenoh-subscriber

./: .gitignore  Cargo.toml  LATENCY_OPTIMIZATIONS.md  Makefile  README.md  build.sh  detected_transforms.json  imu_calibration.json  intrinsics.txt  libclang_export.txt  pyproject.toml  test_latency_optimized.py
python/: FUSION_README.md  INTEGRATION_GUIDE.md  README.md  README_opencv_odometry.md  README_recording.md  SYSTEM_SUMMARY.md  alignment_and_matching.py  alignment_and_matching_threaded.py  alignment_minimal.py  alignment_optimized_rerun.py  auto_coordinate_detection.py  calibrate_offsets.py  camera_config.py  camera_data_manager.py  coordinate_frame_test.py  data_source.py  debug_playback.py  debug_rgb_playback.py  example.py  frame_manager.py  frame_reconstruction.py  fusion_backend.py  fusion_pose_estimate.py  fusion_test_utils.py  geometry_sen.py  gyro_angle_estimate.py  imu_testing.py  imu_utils.py  latency_analysis.py  performance_test.py  profiling.py  run_fusion.py  test_camera_data_manager.py  test_playback_processing.py  test_recording_system.py  test_rgb_fix.py  vision_utils.py  visualization.py
src/: cli.rs  lib.rs  main.rs  odom.rs  odometry.rs  reproject.rs  rerun_utils.rs  rgbd_odom.rs  sync.rs  types.rs
src/logio/: reader.rs  writer.rs
