[package]
name = "zenoh-d435i-subscriber"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bincode = "2.0.1"
bytemuck = "1.23.0"
byteorder = "1.5.0"
clap = { version = "4.5.38", features = ["derive"] }
features = "0.10.0"
itertools = "0.14.0"
nalgebra = { version = "0.33.2", features = ["std"] }
ndarray = "0.16.1"
ordered-float = "5.0.0"
rerun = "0.23.2"
serde = { version = "1.0.219", features = ["derive"] }
snap = "1.1.1"
tokio = "1.45.0"
turbojpeg = { version = "1.3.3", features = ["image"] }
zenoh = "1.3.4"
zstd = { version = "0.13.3", features = ["zstdmt"] }
